# bhumi

./: .gitignore  Cargo.toml  LICENSE  README.md  design.md
bhumi/: Cargo.toml
bhumi-gui/: Cargo.toml
bhumi-gui/src/: main.rs  main_complex.rs  main_empty.rs
bhumi-terminal/: Cargo.toml
bhumi-terminal/src/: main.rs  main_old.rs
bhumi-web/: Cargo.toml  build.sh  index.html
bhumi-web/src/: lib.rs  lib_broken.rs  web_physics.rs
bhumi-wgpu/: Cargo.toml
bhumi-wgpu/src/: main.rs  main_old.rs
bhumi/src/: camera.rs  lib.rs  main.rs  physics.rs  pixel_buffer.rs  renderer.rs
