[workspace]
members = ["bhumi"]
resolver = "2"

[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2024"
description = "general purpose 3D operating system"
repository = "https://github.com/amitu/bhumi"
rust-version = "1.89"

[workspace.dependencies]
winit = "0.30"
wgpu = "27"
env_logger = "0.10"
anyhow = "1"
pollster = "0.4"
