[package]
name = "bhumi-terminal"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
description = "bhumi ui in terminal"
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
bhumi = { path = "../bhumi" }
viuer = { version = "0.7", features = ["sixel"] }
image = "0.24"
