[package]
name = "bhumi-web"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "bhumi web renderer for mobile and desktop browsers"
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM-compatible core
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Graphics and math
glam = "0.30"
nalgebra = "0.30"

# Logging
log = "0.4"
console_log = "1.0"

# Bhumi core - same as other backends
bhumi = { path = "../bhumi" }

# Extended web-sys features for gamepad and canvas
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window", 
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Gamepad",
  "GamepadButton",
  "Navigator",
]