[package]
name = "bhumi-wgpu"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "bhumi ui built using GPU / windows etc"
repository.workspace = true
rust-version.workspace = true

[dependencies]
winit.workspace = true
pixels.workspace = true
bhumi = { path = "../bhumi" }
env_logger = "0.10"
log = "0.4"
