[package]
name = "bhumi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Core 3D graphics engine with modular renderer backends"
repository.workspace = true
rust-version.workspace = true

[dependencies]
rapier3d = "0.30"
nalgebra = "0.30"
bytemuck = { version = "1.0", features = ["derive"] }
wgpu = "22.0"
pollster = "0.3"
glam = "0.30"